Update composer.json dbal 3 bump

--- a/composer.json
+++ b/composer.json
@@ -34,7 +34,7 @@
         "clue/block-react": "^1.5",
         "clue/reactphp-sqlite": "^1.0",
         "clue/redis-react": "^2.6",
-        "doctrine/dbal": "^2.9",
+        "doctrine/dbal": "^2.9|^3.0",
         "evenement/evenement": "^2.0|^3.0",
         "facade/ignition-contracts": "^1.0",
         "guzzlehttp/psr7": "^1.5",
